--- a/views/templates/admin/configuration.html.twig
+++ b/views/templates/admin/configuration.html.twig
@@ -9,7 +9,7 @@
 
 {% extends '@Modules/ps_legalcompliance/views/templates/admin/header/moduleheader.html.twig' %}
 
-{% trans_default_domain "Modules.Pslegalcompliance.Admin" %}
+{% trans_default_domain "Modules.Legalcompliance.Admin" %}
 
 {% form_theme labelForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 {% form_theme virtualForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
