--- a/views/templates/admin/form_ui_kit.html.twig
+++ b/views/templates/admin/form_ui_kit.html.twig
@@ -7,7 +7,7 @@
  * @license   commercial, see licence.txt
  *#}
 {% use '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
-{% trans_default_domain "Modules.Pslegalcompliance.Admin" %}
+{% trans_default_domain "Modules.Legalcompliance.Admin" %}
 
 {% block translatefields_widget %}
   {{ parent() }}
