--- a/views/templates/admin/header/moduleheader.html.twig
+++ b/views/templates/admin/header/moduleheader.html.twig
@@ -23,8 +23,8 @@
         <div class="info_author col-md-4 col-lg-6">
           <h2>{{ module.author }} </h2>
           <p>
-            {{ 'Gurkcity creates professional and individual modules and addons for PrestaShop onlinestores since 2010.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
-            {{ 'Get more information from the links below.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
+            {{ 'Gurkcity creates professional and individual modules and addons for PrestaShop onlinestores since 2010.'|trans({}, 'Modules.Legalcompliance.Admin') }}
+            {{ 'Get more information from the links below.'|trans({}, 'Modules.Legalcompliance.Admin') }}
           </p>
           <address>
             <table>
@@ -41,13 +41,13 @@
                 </tr>
                 <tr>
                   <td><i class="material-icons">key</i></td>
-                  <td>{{ 'License key'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</td>
+                  <td>{{ 'License key'|trans({}, 'Modules.Legalcompliance.Admin') }}</td>
                   <td><a href="http://www.onlineshop-module.de/lizenz-registrieren" target="_blank">{{ module.license_key }}</a></td>
                 </tr>
               </tbody>
             </table>
           </address>
-          <p><a href="{{ module.path }}licence.txt" target="_blank">{{ 'Please consider our license disclaimer.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</a></p>
+          <p><a href="{{ module.path }}licence.txt" target="_blank">{{ 'Please consider our license disclaimer.'|trans({}, 'Modules.Legalcompliance.Admin') }}</a></p>
         </div>
       </div>
     </div>
