--- a/views/templates/admin/maintenance/maintenance.html.twig
+++ b/views/templates/admin/maintenance/maintenance.html.twig
@@ -21,11 +21,11 @@
   <div class="col-xl-6">
     <div class="card">
       <h3 class="card-header">
-        <i class="material-icons">settings</i> {{ 'Advanced Options'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
+        <i class="material-icons">settings</i> {{ 'Advanced Options'|trans({}, 'Modules.Legalcompliance.Admin') }}
       </h3>
       <div class="card-body">
         <p>
-          <a id="btn_change_license_code" class="btn btn-default" href="{{ path('ps_legalcompliance_license') }}">{{ 'Change license code'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</a>
+          <a id="btn_change_license_code" class="btn btn-default" href="{{ path('ps_legalcompliance_license') }}">{{ 'Change license code'|trans({}, 'Modules.Legalcompliance.Admin') }}</a>
         </p>
         <ul class="list-unstyled">
           <li>PHP Version: <b>{{ php_version }}</b></li>
