--- a/views/templates/admin/payment.html.twig
+++ b/views/templates/admin/payment.html.twig
@@ -19,7 +19,7 @@
       <div class="col-xl-12">
         <div class="card">
           <h3 class="card-header">
-            <i class="material-icons">money</i> {{ 'Payment Configuration'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
+            <i class="material-icons">money</i> {{ 'Payment Configuration'|trans({}, 'Modules.Legalcompliance.Admin') }}
           </h3>
 
           <div class="card-body">
@@ -30,7 +30,7 @@
 
           <div class="card-footer">
             <div class="d-flex justify-content-end">
-              <button class="btn btn-primary">{{ 'Save'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</button>
+              <button class="btn btn-primary">{{ 'Save'|trans({}, 'Modules.Legalcompliance.Admin') }}</button>
             </div>
           </div>
         </div>
