--- a/views/templates/admin/license/license.html.twig
+++ b/views/templates/admin/license/license.html.twig
@@ -16,20 +16,20 @@
     {{ form_start(form) }}
     <div class="card">
       <h3 class="card-header">
-        <i class="material-icons">description</i> {{ 'License agreement'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
+        <i class="material-icons">description</i> {{ 'License agreement'|trans({}, 'Modules.Legalcompliance.Admin') }}
       </h3>
 
       <div class="card-body">
         <p>{{ 'If you want to use this Module, please enter your license code here. You can get it in your customer account at Onlineshop-Module.de %tag_start%"Onlineshop-module.de"%tag_end%.'|trans({
           '%tag_start%': '<a href="http://www.onlineshop-module.de/lizenz-registrieren" target="_blank">',
-          '%tag_end%': '</a>',}, 'Modules.Pslegalcompliance.Admin')|raw }}</p>
+          '%tag_end%': '</a>',}, 'Modules.Legalcompliance.Admin')|raw }}</p>
         <div class="form-wrapper">
           {{ form_widget(form) }}
         </div>
       </div>
       <div class="card-footer">
         <div class="d-flex justify-content-end">
-          <button class="btn btn-primary">{{ 'Save License and continue...'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</button>
+          <button class="btn btn-primary">{{ 'Save License and continue...'|trans({}, 'Modules.Legalcompliance.Admin') }}</button>
         </div>
       </div>
     </div>
