--- a/views/templates/admin/maintenance/_partials/orderstate.html.twig
+++ b/views/templates/admin/maintenance/_partials/orderstate.html.twig
@@ -10,18 +10,18 @@
   <div class="card">
 
     <h3 class="card-header">
-      <i class="material-icons">money</i> {{ 'Order States'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
+      <i class="material-icons">money</i> {{ 'Order States'|trans({}, 'Modules.Legalcompliance.Admin') }}
     </h3>
 
     <div class="card-body">
-      <p>{{ 'This list shows all order statuses that this module installs. If an order status is not installed correctly, you can reset it here.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</p>
+      <p>{{ 'This list shows all order statuses that this module installs. If an order status is not installed correctly, you can reset it here.'|trans({}, 'Modules.Legalcompliance.Admin') }}</p>
 
       {% if orderstates is not empty %}
       <table class="orderstate_list table table-sm table-responsive">
         <thead>
           <tr>
-            <th>{{ 'Status'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
-            <th>{{ 'Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
+            <th>{{ 'Status'|trans({}, 'Modules.Legalcompliance.Admin') }}</th>
+            <th>{{ 'Name'|trans({}, 'Modules.Legalcompliance.Admin') }}</th>
           </tr>
         </thead>
         <tbody>
@@ -29,9 +29,9 @@
           <tr>
             <td>
               {% if not orderstate.valid %}
-              <span class="badge badge-warning">{{ 'missing!'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
+              <span class="badge badge-warning">{{ 'missing!'|trans({}, 'Modules.Legalcompliance.Admin') }}</span>
               {% else %}
-              <span class="badge badge-success">{{ 'ok'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
+              <span class="badge badge-success">{{ 'ok'|trans({}, 'Modules.Legalcompliance.Admin') }}</span>
               {% endif %}
             </td>
             <td>{{ orderstate.name }}</td>
@@ -40,13 +40,13 @@
         </tbody>
       </table>
       {% else %}
-      <p class="alert alert-info">{{ 'There are no orderstates for this module to install'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</p>
+      <p class="alert alert-info">{{ 'There are no orderstates for this module to install'|trans({}, 'Modules.Legalcompliance.Admin') }}</p>
       {% endif %}
     </div>
 
     <div class="card-footer">
       <div class="d-flex justify-content-end">
-        <a class="btn btn-primary" href="{{ path('ps_legalcompliance_maintenance_orderstate_reset') }}">{{ 'Install missing orderstates'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</a>
+        <a class="btn btn-primary" href="{{ path('ps_legalcompliance_maintenance_orderstate_reset') }}">{{ 'Install missing orderstates'|trans({}, 'Modules.Legalcompliance.Admin') }}</a>
       </div>
     </div>
 
